--- a/example_codes/fluent-python-c2-array-of-sequence.ipynb
+++ b/example_codes/fluent-python-c2-array-of-sequence.ipynb
@@ -17,7 +17,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Let's learn about list comprehensions! You are given three integers  and  representing the dimensions of a cuboid along with an integer . Print a list of all possible coordinates given by  on a 3D grid where the sum of  is not equal to . Here, . Please use list comprehensions rather than multiple loops, as a learning exercise.\n",
+    "\n",
+    "Example\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "All permutations of  are:\n",
+    ".\n",
+    "\n",
+    "Print an array of the elements that do not sum to .\n",
+    "\n",
+    "\n",
+    "Input Format\n",
+    "\n",
+    "Four integers  and , each on a separate line.\n",
+    "\n",
+    "Constraints\n",
+    "\n",
+    "Print the list in lexicographic increasing order."
+   ]
   }
  ],
  "metadata": {
